# easylang_de

./: .gitignore  README.md  download_videos.sh  pyproject.toml  transcribe.py
data/: README.md
easylang_de/: batch_extract_nouns.py  calculate_error_rate.py  dictionary.py  extract_nouns.py  genus.py  stats.py
nouns/: 10 Austrian Words that Germans don't understand ｜ Easy German 222 [sOXjxZY4FUg].json  10 Common Mistakes German Learners Make ｜ Easy German 227 [EqQQuyTUlMo].json  10 German Idioms that include other Nations - Basic Phrases (24) [yWmT1XmbYZ4].json  10 German Verbs that Change Vowels (Strong Verbs for Beginners) ｜ Super Easy German 220 [4gl3-i0KXqY].json  10 More German Expressions You Should Know! ｜ Easy German 361 [Zx6Yi7c0OQc].json  10 Phrases Germans shout at their Children - German Basic Phrases (10) [y_cCIZR09JY].json  10 Things That Happen Only in Germany [OQtPiclJPEU].json  10 Things to Do in Nuremberg ｜ Easy German 502 [Nkd85FzxKI0].json  10 Useful Bavarian Expressions #shorts #bavarian [fgVTRG1dHBU].json  10 fake English words in German - German Basic Phrases (35) [ab_4720zhcQ].json  10 insults that describe typical German attitudes - German Basic Phrases (16) [bIeTn7DNgCc].json  100 German Adjectives You Should Know ｜ Super Easy German 226 [_zxq6dkt_xE].json  100 Words You Should Know When Coming to Germany ｜ Super Easy German 203 [r8HiWsBe5ko].json  11 Funny German Expressions Explained ｜ Easy German 225 [JBUBvonZNI4].json  11 German Interjections You Hear Every Day ｜ Super Easy German 171 [LaCLFnv9ZBE].json  (+925 more)
(+932 files in other folders)
