[tool.poetry]
name = "easylang-de"
version = "0.1.0"
description = ""
authors = ["o5011 <152018508+o5011@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "easylang_de"}]

[tool.poetry.dependencies]
python = "^3.10"
spacy = "^3.7.2"
pandas = "^2.1.3"
openai = "^1.3.5"
colour = "^0.1.5"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
